# forum

./: .gitignore  README.md  SPEC.md  start.sh
.monkeycode/: TASK_ROADMAP.md
.monkeycode/specs/community-forum/: design.md  requirements.md  tasklist.md
backend/: Cargo.toml  forum.db
backend/migrations/: 001_initial.sql  002_gamification.sql  003_comment_root_parent.sql
backend/src/: config.rs  error.rs  extractors.rs  main.rs
backend/src/middleware/: cors.rs
backend/src/models/: comment.rs  follow.rs  mod.rs  notification.rs  post.rs  report.rs  response.rs  tag.rs  user.rs  vote.rs
backend/src/oauth/: github.rs  google.rs  mod.rs
backend/src/repositories/: comment_repo.rs  follow_repo.rs  mod.rs  notification_repo.rs  post_repo.rs  report_repo.rs  tag_repo.rs  user_repo.rs  vote_repo.rs
backend/src/routes/: admin.rs  announcement.rs  auth.rs  badge.rs  block.rs  bookmark.rs  comment.rs  draft.rs  folder.rs  follow.rs  mod.rs  notification.rs  post.rs  report.rs  signin.rs  tag.rs  user.rs  vote.rs  ws.rs
backend/src/services/: admin_service.rs  auth_service.rs  badge_service.rs  comment_service.rs  follow_service.rs  mod.rs  notification_service.rs  post_service.rs  sensitive_words.rs  signin_service.rs  user_service.rs  utils.rs  vote_service.rs
backend/src/ws/: broadcast.rs  client.rs  mod.rs
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/composables/: useApi.ts  useDraft.ts  useGlobalWebSocket.ts  useKeyboardShortcuts.ts  usePrefetch.ts  (+2 more)
(+42 files in other folders)
