[package]
name = "community_forum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "compression-br"] }
tower-layer = "0.3"
hyper = "1.5"
hyper-util = { version = "0.1", features = ["server", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "4"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.17"
validator = { version = "0.19", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
regex = "1"
once_cell = "1"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
